--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+  <ion-split-pane contentId="main-content"   >
+    <ion-menu contentId="main-content" type="overlay"   >
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>ionicFAF</ion-list-header>
           <ion-note>it's a frist app in ionic to me!</ion-note>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+          <ion-menu-toggle [autoHide]="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
@@ -14,11 +14,12 @@
           </ion-menu-toggle>
         </ion-list>
 
-<ion-button color="tertiary" size="full" (click)="logout()"> Logout</ion-button>
+         <ion-button color="tertiary" size="full" (click)="logout()"> Logout</ion-button>
 
       
       </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+    </ion-menu >
+    <ion-router-outlet id="main-content">
+    </ion-router-outlet>
   </ion-split-pane>
 </ion-app>
