--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -39,6 +39,8 @@
             <!-- <ion-button color="secondary" fill="clear " size="full" [disabled]="!form.get('email').valid">forget email/passord</ion-button> -->
     <ion-button color="primary" size="full" (click)="toHome()" [disabled]="!form.valid"> Login</ion-button>
     <ion-button color="primary" size="full" fill="clear " (click)="toRegister()"> Regester</ion-button>
+    <ion-button color="primary" size="full" fill="clear " (click)="scheduleBasic()"> scheduleBasic</ion-button>
+
     
           </ion-card-content>
         </ion-card> 
