--- a/src/app/pages/qr/qr.page.html
+++ b/src/app/pages/qr/qr.page.html
@@ -12,7 +12,7 @@
 
   <div class="main-header"></div>
 
-  <ion-grid [style.visibility]="content_visibility" color="light" >
+  <ion-grid [hidden]="false" color="light" >
    
 
   <ion-row class="ion-margin-horizontal" style="align-content: center;">
