--- a/src/app/pages/refe/refe.page.html
+++ b/src/app/pages/refe/refe.page.html
@@ -36,8 +36,8 @@
     <ion-label>
       <b>{{key}}</b>
     </ion-label>
-    <ion-button size="small" (click)="getValue(Key)" >View</ion-button>
-    <ion-button size="small" (click)="deleteStorge(Key)" >Delete</ion-button>
+    <ion-button size="small" (click)="getValue(key)" >View</ion-button>
+    <ion-button size="small" (click)="deleteStorge(key)" >Delete</ion-button>
   </ion-item>
 </ion-list>
 <!-- 
