--- a/src/app/noti/noti.component.html
+++ b/src/app/noti/noti.component.html
@@ -1,4 +1,4 @@
 <p>
   noti works!
 </p>
-<ion-button expand="block" (click)="presentToast('top')">Present Toast At the Top</ion-button>
+<ion-button expand="block" (click)="simpleNotif()">Present Toast At the Top</ion-button>
