--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header when="xl">
   <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
       <ion-menu-button ></ion-menu-button>
